2005-08-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/level/gstlevel.c: (gst_level_init), (gst_level_set_caps),
	(gst_level_transform):
	* gst/level/gstlevel.h:
	  remove unused MS struct member
	  don't reset the CS values for channels on every _chain, so that
	  level actually correctly calculates the RMS value.  sigh.
	  calculate RMS values correctly for peak and decay peak sums;
	  before we were signalling them as if they already were amplitude
	  and not power values.  sigh.
	Remind me to not try and pretend I'm writing DSP code.

2005-08-10  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/faad/gstfaad.c: (gst_faad_class_init), (gst_faad_setcaps):
	  Add debug category, remove Close() call that made it crash
	  whenever reusing, renegotiating or anything; Close() actually
	  free()s the handle and should only be called on READY->NULL.
	* gst/qtdemux/qtdemux.c: (gst_qtdemux_loop_header):
	  Actually set caps on buffer (in addition to pad), also.

2005-08-10  Owen Fraser-Green  <owen@discobabe.net>

	* gst/realmedia/rmdemux.c (gst_rmdemux_sink_activate) 
	(gst_rmdemux_sink_activate_push, gst_rmdemux_sink_activate_pull) 
	(gst_rmdemux_loop, gst_rmdemux_src_event) 
	(gst_rmdemux_perform_seek, gst_rmdemux_src_query): Implemented
	push-pull and seeking.

2005-08-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/faad/gstfaad.c: (gst_faad_event):
	  Sign/unsign mismatch.
	* configure.ac:
	* gst/qtdemux/qtdemux.c: (gst_qtdemux_class_init),
	(gst_qtdemux_init), (gst_qtdemux_get_src_query_types),
	(gst_qtdemux_handle_src_query), (gst_qtdemux_handle_src_event),
	(plugin_init), (gst_qtdemux_handle_sink_event),
	(gst_qtdemux_change_state), (gst_qtdemux_loop_header),
	(qtdemux_sink_activate), (qtdemux_sink_activate_pull),
	(gst_qtdemux_add_stream), (qtdemux_parse), (qtdemux_parse_tree),
	(qtdemux_parse_trak), (qtdemux_video_caps), (qtdemux_audio_caps):
	* gst/qtdemux/qtdemux.h:
	  Half-assed port (hey, it works).
